<resources>
    <string name="app_name">Cinta Analytics</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="uid">uid</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="home_1">Home 1</string>
    <string name="home_2">Home 2</string>
    <string name="dash_1">Dash 1</string>
    <string name="dash_2">Dash 2</string>
    <string name="notif_1">Notif 1</string>
    <string name="notif_2">Notif 2</string>
    <string name="home_note">NOTE: Session starts when app starts and it persists as long as app is running even in the background. Session stops when you properly close the app.\n\nKNOWN ISSUE: On some phones (mostly Chinese phones) SESSION STOP event won\'t be registered reliably if you choose to close the app by swiping from the system tray. It is because these OEMs force close the app immediately instead of giving the app a chance to exit gracefully.</string>
</resources>